--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       <img
         src="https://images.unsplash.com/photo-1725462566776-64eb9548e0bc?q=80&w=1887&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
         alt="A smiling person standing in front of a mountain landscape"
+        width="500px"
       />
       <p>
         Hi, I'm Abo! I'm a software developer passionate about creating
