page updated name

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div id="header">
-      <h1>John Doe</h1>
+      <h1>Abo</h1>
     </div>
     <div id="title">
       <h2>Welcome to My Page</h2>
