--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>HW 2</title>
   </head>
   <body>
-    <div id="header">
-      <h1>Abo</h1>
-    </div>
+    <header>
+      <h1>NAME Abo</h1>
+    </header>
     <div id="title">
       <h2>Welcome to My Page</h2>
-      <p>
+      <p class="quote">
         "The only way to do great work is to love what you do." - Steve Jobs
       </p>
     </div>
@@ -19,31 +20,37 @@
       <img
         src="https://images.unsplash.com/photo-1725462566776-64eb9548e0bc?q=80&w=1887&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
         alt="A smiling person standing in front of a mountain landscape"
-        width="500px"
       />
-      <p>
-        Hi, I'm Abo! I'm a software developer passionate about creating
-        user-friendly applications.
-      </p>
+      <div>
+        <h3>ABOUT</h3>
+        <p>
+          Hi, I'm Abo! I'm a software developer passionate about creating
+          user-friendly applications.
+        </p>
+      </div>
     </div>
-    <div id="fav">
-      <ol>
-        <li>Pizza</li>
-        <li>Sushi</li>
-        <li>Tacos</li>
-      </ol>
-      <ol>
-        <li>Albert Einstein</li>
-        <li>Marie Curie</li>
-        <li>Nelson Mandela</li>
-      </ol>
-      <ol>
-        <li>The Shawshank Redemption</li>
-        <li>Inception</li>
-        <li>The Matrix</li>
-      </ol>
+    <div id="favorites">
+      <h3>FAVORITES</h3>
+      <div class="fav-lists">
+        <ol>
+          <li>Pizza</li>
+          <li>Sushi</li>
+          <li>Tacos</li>
+        </ol>
+        <ol>
+          <li>Albert Einstein</li>
+          <li>Marie Curie</li>
+          <li>Nelson Mandela</li>
+        </ol>
+        <ol>
+          <li>The Shawshank Redemption</li>
+          <li>Inception</li>
+          <li>The Matrix</li>
+        </ol>
+      </div>
     </div>
-    <div id="wish">
+    <div id="wishes">
+      <h3>WISHES</h3>
       <p>
         My life wish is to travel the world, experience different cultures, and
         use technology to make a positive impact on society. I dream of creating
