--- a/hw1.html
+++ b/hw1.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
     <title>Introduction Page</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Main Heading</h1>
     <h2>Sub-Heading</h2>
-    <p>Hello, my name is Abdullah. I am a Fullstack dev with a background in Web Dev. I'm passionate about ML.</p>
-    <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fopensocietyuniversitynetwork.org%2Fnewsroom%2Fabdullah-nazari-2024-08-02&psig=AOvVaw1mqjEuA2VK81RxDY92tQAI&ust=1725369705583000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCOin0JitpIgDFQAAAAAdAAAAABAE" alt="Abo" style="background: transparent;">
-</body>
+    <p>
+      Hello, my name is Abdullah. I am a Fullstack dev with a background in Web
+      Dev. I'm passionate about ML.
+    </p>
+    <img
+      src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fopensocietyuniversitynetwork.org%2Fnewsroom%2Fabdullah-nazari-2024-08-02&psig=AOvVaw1mqjEuA2VK81RxDY92tQAI&ust=1725369705583000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCOin0JitpIgDFQAAAAAdAAAAABAE"
+      alt="Abo"
+      style="background: transparent"
+    />
+  </body>
 </html>
