--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <div>
         <h3>ABOUT</h3>
         <p>
-          Hi, I'm Abo! I'm a software developer passionate about creating
+          Hi, I'm Abo I'm a software developer passionate about creating
           user-friendly applications.
         </p>
       </div>
