--- a/grid2.html
+++ b/grid2.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="grid2.css" />
   </head>
   <body>
+    <img
+      src="https://cdn.imgchest.com/files/wye3cd58r4b.png"
+      style="position: absolute; top: 0; left: 0; z-index: -1"
+    />
     <div class="container">
       <div class="row1">
         <div class="box1">1</div>
